--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -2081,40 +2081,105 @@ margin-top: 20px"/>
         <div class="col-md-12">
             <div class="portlet showPage rightCardContent">
                 <div class="col-md-12">
-                    <ul class="list-unstyled contactInfos">
-                        <li ng-show="account.account_type">
-                                        <span>
-                                            {{ _('Type:') }}
-                                            <a class="tag ng-binding"
-                                               href="/#/search/type:Account #<%= account.account_type %>">
-                                                #<%= account.account_type %>
+                    <ul class="list-unstyled metaDataList">
+                        <li ng-show="lead.status || showEdit">
+                                <div class="btn-group">
+                                    <span class="title">
+                                           <i class="fa fa-tachometer"></i>
+                                           {{ _(' Status : ') }}
+                                    </span>
+                                    <span ng-hide="showEdit">
+                                            <%=lead.status%>
+                                    </span>
+                                    <a ng-show="showEdit" style="  color: #262626;text-decoration: none; margin-left:0px" href="#"
+                                       data-toggle="dropdown" style="margin-right:0px">
+                                       <span>
+                                            <%=lead.status%>
+                                       </span>
+                                       
+                                        <i class="icon-angle-down fa fa-angle-down"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li ng-repeat="leadstat in leadstatuses">
+                                            <a ng-click="inlinePatch('Lead','', 'status',lead.entityKey,leadstat.status)" data-toggle="modal" style="cursor:pointer">
+                                                <%=leadstat.status%>
                                             </a>
-                                        </span>
+                                        </li>
+                                        
+                                    </ul>
+                                </div>
                         </li>
-                        <li ng-show="account.industry">
+                        <li ng-show="lead.source|| showEdit"> 
+                             <div class="btn-group">
+                                    <span class="title">
+                                            <i class="fa fa-code-fork"></i>
+                                            {{ _('Source:') }}
+                                    </span>
+                                     <span ng-hide="showEdit">
+                                        <%= lead.source%>
+                                    </span>
+                                    <a ng-show="showEdit" style="  color: #262626;text-decoration: none; margin-left:0px" href="#"
+                                       data-toggle="dropdown" style="margin-right:0px">
                                         <span>
-                                            {{ _('Industry:') }}
-                                            <a class="tag ng-binding"
-                                               href="/#/search/type:Lead  #<%= account.industry %>">
-                                                #<%= account.industry %>
-                                            </a>
+                                             <%= lead.source%>
                                         </span>
+                                        <i class="icon-angle-down fa fa-angle-down"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a ng-click="inlinePatch('Lead','', 'source',lead.entityKey,'Social Media')">{{ _('Social Media') }}</a></li>
+                                        <li><a ng-click="inlinePatch('Lead','', 'source',lead.entityKey,'Linkedin')">{{ _('Linkedin') }}</a></li>
+                                        <li><a ng-click="inlinePatch('Lead','', 'source',lead.entityKey,'Mail')">{{ _('Mail') }}</a></li>
+                                        <li><a ng-click="inlinePatch('Lead','', 'source',lead.entityKey,'Web Site')">{{ _('Web Site') }}</a></li>
+                                        <li><a ng-click="inlinePatch('Lead','', 'source',lead.entityKey,'Phone Inquiry')"> {{ _('Phone Inquiry') }}</a></li>
+                                        <li><a ng-click="inlinePatch('Lead','', 'source',lead.entityKey,'Partner Referral')">{{ _('Partner Referral') }}</a>
+                                        </li>
+                                        <li value="Purchased List"><a ng-click="inlinePatch('Lead','', 'source',lead.entityKey,'Purchased List')">{{ _('Purchased List') }}</a>
+                                        </li>
+                                        <li ><a ng-click="inlinePatch('Lead','', 'source',lead.entityKey,'Other')">{{ _('Other') }}</a></li>
+                                    </ul>
+                                </div>
                         </li>
-                        <li ng-show="lead.owner">
-                                        <span>
-                                           {{ _('Owner:') }}
-                                          <a class="tag ng-binding"
-                                             href="/#/search/type:Lead owner:<%= lead.owner.google_user_id %>">
-                                              #<%= lead.owner.google_display_name %>
-                                          </a>
-                                        </span>
+                        <li ng-show="lead.owner|| showEdit">
+                            <div class="btn-group">
+                                <span class="title">
+                                    <i class="fa fa-user"></i>
+                                   {{ _('Owner:') }}
+                                </span>
+                                <span ng-hide="showEdit">
+                                      <%= lead.owner.google_display_name %>
+                                </span>
+                                <a ng-show="showEdit" style="  color: #262626;text-decoration: none; margin-left:0px" href="#"
+                                   data-toggle="dropdown" style="margin-right:0px">
+                                    
+                                    <span>
+                                      <%= lead.owner.google_display_name %>
+                                    </span>
+                                    <i class="icon-angle-down fa fa-angle-down"></i>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li ng-repeat="user in users">
+                                        <a ng-click="inlinePatch('Lead','', 'owner',lead.entityKey,user.google_user_id)">
+                                            <%=user.google_display_name%>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                         <li class="" ng-show="lead.owner.google_user_id=={{ ME }}||{{ is_admin }}">
-
                             <div class="btn-group">
-                                <a class="" style="  color: #262626;text-decoration: none; margin-left:0px" href="#"
+                                <span class="title">
+                                       <i class="fa fa-key"></i>
+                                         {{ _(' Access : ') }}
+                                </span>
+                                <span ng-hide="showEdit">
+                                       <%=lead.access%> 
+                                </span>
+                                <a ng-show="showEdit" style="  color: #262626;text-decoration: none; margin-left:0px" href="#"
                                    data-toggle="dropdown" style="margin-right:0px">
-                                    {{ _(' Access : ') }}<%=lead.access%>
+                                   <span>
+                                       <%=lead.access%> 
+                                   </span>
+                                   
                                     <i class="icon-angle-down fa fa-angle-down"></i>
                                 </a>
                                 <ul class="dropdown-menu">
@@ -2132,7 +2197,13 @@ margin-top: 20px"/>
                             </div>
                         </li>
                         <li>
-                            <span class="contact-title">{{ _('Updated:') }}  <%=fromNow(lead.updated_at)%> </span>
+                            <span class="title">
+                                <i class="fa fa-clock-o"></i>
+                                {{ _('Updated:') }}
+                                </span>
+                            <span>
+                                <%=fromNow(lead.updated_at)%>
+                            </span>
                         </li>
                     </ul>
                 </div>
